# pdftodoc

./: .gitignore  README.md  RELEASE.md  diag.py  main.py  pdftodoc.spec  pdftodoc_diag.spec  pyproject.toml
.claude/: settings.local.json
docs/: OCR引擎性能实测报告.md  WPS对比分析.md  architecture.md
downloads/: current.docx  特定规则申领承诺书-安路信-editable-no-bg.docx  特定规则申领承诺书-安路信-editable-spaced-seal.docx  特定规则申领承诺书-安路信-editable-structured.docx  特定规则申领承诺书-安路信-editable-table-seal-clean.docx  特定规则申领承诺书-安路信-editable-with-seal.docx  特定规则申领承诺书-安路信-layout-preserved.docx  特定规则申领承诺书-安路信-no-ghost.docx  特定规则申领承诺书-安路信-ocr-fixed.docx  特定规则申领承诺书-安路信-popo-fast.docx  特定规则申领承诺书-安路信-positioned-editable-v2.docx  特定规则申领承诺书-安路信-positioned-editable.docx  特定规则申领承诺书-安路信-table-fixed.docx
downloads/tesseract_eval/: page_1-psm11.err  page_1-psm11.txt  page_1-psm4.txt  page_1-psm6.txt  page_2-psm11.err  page_2-psm11.txt  page_2-psm4.txt  page_2-psm6.txt  timings.txt
scripts/: build.sh  debug.sh  fetch_models.sh  run.sh  setup.sh  test.sh  wipe_light_watermark.py
src/pdftodoc/: __init__.py  app.py
src/pdftodoc/core/: __init__.py  detector.py  service.py
src/pdftodoc/core/engines/: __init__.py  ocr_engine.py  (+3 more)
src/pdftodoc/gui/: __init__.py  main_window.py  worker.py
src/pdftodoc/infra/: __init__.py  logging_config.py  paths.py
src/pdftodoc/models/: __init__.py  enums.py  progress.py  result.py  task.py
tests/: conftest.py  test_detector.py  test_models.py  test_ocr_engine.py  test_postprocess.py  test_recognizer.py  test_seal_detector.py  test_service.py  test_table_detector.py  test_text_engine.py  test_watermark.py
(+12 files in other folders)
