[project]
name = "pdftodoc"
version = "0.1.0"
description = "Windows 桌面 PDF 转 DOCX 工具（pdf2docx + PaddleOCR）"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "PySide6>=6.7",
    "pdf2docx>=0.5.13",
    "PyMuPDF>=1.24",
    "python-docx>=1.1",
    "paddleocr>=3.0,<4.0",
    "paddlepaddle==3.3.1",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
    "pyinstaller>=6.6",
]

# ---- 构建后端：src 布局，使 pdftodoc 可被 import ----
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdftodoc"]

# ---- PyPI 默认源换清华镜像（加速国内下载） ----
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

# ---- 关键：PyPI 无 Windows + Python 3.13 的 paddle 轮子，须走官方 CPU 索引 ----
[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[tool.uv.sources]
paddlepaddle = { index = "paddle-cpu" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

# 第三方库缺少类型存根，忽略其缺失导入
[[tool.mypy.overrides]]
module = [
    "fitz", "pymupdf", "pdf2docx", "pdf2docx.*",
    "paddleocr", "paddle", "paddle.*",
    "docx", "docx.*", "cv2", "numpy.*",
    "modelscope", "modelscope.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
